<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">Housemate</string>

    <!-- Activity -->
    <string name="activity_name">Housemate</string>

    <!-- Permission -->
    <string name="permission_name_access">Housemate</string>
    <string name="permission_description_access">Connect to Housemate Server</string>

    <!-- Action bar -->
    <string name="action_settings">Settings</string>

    <!-- Main view -->
    <string name="main_welcomeMessage">Welcome to Housemate!</string>

    <!-- Preferences names -->
    <string name="pref_title_server">Server Details</string>
    <string name="pref_title_server_host">Host</string>
    <string name="pref_title_server_port">Port</string>

    <string name="pref_title_activity">Message activity monitoring</string>
    <string name="pref_title_activity_check_delay">Activity check delay</string>
    <string name="pref_title_post_activity_delay">Post activity delay</string>
    <string name="pref_title_max_disconnect_time">Max disconnect time</string>

    <!-- Service -->
    <string name="service_name_connection">Housemate Connection Service</string>
    <string name="service_name_router">Housemate App Service</string>
</resources>