<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="preferences">
    <PreferenceCategory
            android:title="@string/pref_title_server">
        <EditTextPreference
                android:key="client.socket.host"
                android:title="@string/pref_title_server_host"
                android:defaultValue="" />
        <EditTextPreference
                android:key="client.socket.port"
                android:title="@string/pref_title_server_port"
                android:inputType="number"
                android:defaultValue="46873" />
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/pref_title_activity">
        <EditTextPreference
                android:key="client.socket.activity-check-delay"
                android:title="@string/pref_title_activity_check_delay"
                android:inputType="number"
                android:defaultValue="0" />
        <EditTextPreference
                android:key="client.socket.post-activity-delay"
                android:title="@string/pref_title_post_activity_delay"
                android:inputType="number"
                android:defaultValue="0" />
        <EditTextPreference
                android:key="client.socket.max-disconnect-time"
                android:title="@string/pref_title_max_disconnect_time"
                android:inputType="number"
                android:defaultValue="0" />
    </PreferenceCategory>
</PreferenceScreen>